<resources>
    <string name="app_name">ICS App</string>
    <string name="ics_full_name">Information Center for Students</string>
    <!-- [MENU] events fragment -->
    <string name="menu_event_all">All events</string>
    <string name="menu_event_going">Going</string>
    <string name="menu_event_interested">Interested</string>
    <string name="menu_event_search">Search</string>

    <!-- XML Additional -->
    <string name="xml_event_searchable_label">Search event&#8230;</string>
    <string name="activity_login_authenticating">Authenticating please wait&#8230;</string>

    <!-- Login layout -->
    <string name="activity_login_login">Login</string>
    <string name="activity_login_password">password</string>
    <string name="activity_login_sign_in">SIGN IN</string>
    <string name="activity_login_username">username</string>
    <string name="activity_login_forgot_password">forgot password?</string>
    <string name="activity_login_icsapp">ics </string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="activity_login_stay_logged_in">Stay logged in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <!-- Navigation Drawer Menu Items -->
    <string name="nav_menu_dashboard">Dashboard</string>
    <string name="nav_menu_announcements">Announcements</string>
    <string name="nav_menu_events">Events</string>
    <string name="nav_menu_notice_board">Notice Board</string>
    <string name="nav_menu_newsarticles">News and Articles</string>
    <string name="nav_menu_assignments">Assignments</string>
    <string name="nav_menu_group_user_options">User Options</string>
    <string name="nav_menu_settings">Settings</string>
    <string name="nav_menu_logout">Log out</string>

    <!-- Logout -->
    <string name="action_logout_title">Confirm logout</string>
    <string name="action_logout_content">Are you sure you want to logout?</string>
    <string name="action_logout_cancel">Cancel</string>
    <string name="action_logout_logout">Logout</string>

    <!-- URL -->
    <string name="url_server_address">http://192.168.43.222:8080</string>
    <string name="url_login">http://192.168.43.222:8080/login</string>
    <string name="url_request_event_data">http://192.168.43.222:8080/events</string>
    <string name="url_request_notice_data">http://192.168.43.222:8080/notices</string>

    <!-- Shared Preferences -->
    <string name="SP_USER_FILE">SP_USER_FILE</string>
    <string name="card_template_view_event">View event</string>

    <!-- Navigation Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Settings [Preferences] -->
    <string name="pref_group_general">General</string>

    <string name="pref_group_appearance">Appearance</string>
    <string name="pref_appearance_theme_title">Application theme</string>
    <string name="pref_appearance_theme_summary">Purpe Dark</string>
    <string name="pref_appearance_dark_mode_tilte">Dark mode</string>
    <string name="pref_appearance_dark_mode_summary">Overal application dark theme</string>

    <string name="pref_group_notifications">Notifications</string>
    <string name="pref_notifications_send_title">Send notifications</string>
    <string name="pref_notifications_send_summary">Send notifications when new event,notice or announcement arrives</string>
    <string name="pref_notifications_sound_title">Sound</string>
    <string name="pref_notifications_sound_summary">Device default</string>

    <string name="pref_group_network_usage">Network usage</string>

    <!-- Notice card template -->
    <string name="notice_card_contains_attachment">Contains Attachment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
