<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_group_notifications"
        android:key="pref_key_notifications">
        <SwitchPreference
            android:key="pref_key_send_notifications"
            android:title="@string/pref_notifications_send_title"
            android:summary="@string/pref_notifications_send_summary"
            android:defaultValue="true"/>
        <Preference
            android:key="pref_key_notification_sound"
            android:summary="@string/pref_notifications_sound_summary"
            android:title="@string/pref_notifications_sound_title"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_group_appearance"
        android:key="pref_key_appearance">
        <Preference
            android:key="pref_key_apperance_theme"
            android:title="@string/pref_appearance_theme_title"
            android:summary="@string/pref_appearance_theme_summary"/>
        <SwitchPreference
            android:key="pref_key_appearance_dark_mode"
            android:title="@string/pref_appearance_dark_mode_tilte"
            android:summary="@string/pref_appearance_dark_mode_summary"
            android:defaultValue="false"/>
    </PreferenceCategory>
</PreferenceScreen>