<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/nav_menu_dashboard"/>
        <item
            android:id="@+id/nav_anouncements"
            android:icon="@drawable/ic_announcement_black_24dp"
            android:title="@string/nav_menu_announcements" />
        <item
            android:id="@+id/nav_notice"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/nav_menu_notice_board" />
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_event_black_24dp"
            android:title="@string/nav_menu_events" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_public_black_24dp"
            android:title="@string/nav_menu_newsarticles" />
        <item
            android:id="@+id/nav_assignments"
            android:icon="@drawable/ic_assignment_black_24dp"
            android:title="@string/nav_menu_assignments" />
    </group>

    <item android:title="@string/nav_menu_group_user_options">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/nav_menu_settings" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/nav_menu_logout" />
        </menu>
    </item>

</menu>
