<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/colorPrimary"
    tools:context="xyz.bnayagrawal.android.icsapp.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="16dp"
            android:focusableInTouchMode="true"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:layout_marginEnd="2dp"
                android:text="@string/activity_login_icsapp"
                android:textColor="@android:color/white"
                android:textSize="28sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_login_login"
                android:textColor="@android:color/white"
                android:textSize="28sp"
                android:textStyle="bold" />
        </LinearLayout>

        <ImageView
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_internet" />
    </LinearLayout>
    <!-- Login progress -->
    <android.support.v7.widget.CardView
        android:id="@+id/act_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="vertical"
        app:cardBackgroundColor="?attr/layoutBackground"
        app:contentPadding="28dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="?attr/hintText">

                <AutoCompleteTextView
                    android:id="@+id/act_login_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="?attr/secondaryText"
                    android:drawablePadding="12dp"
                    android:drawableStart="@drawable/ic_user"
                    android:hint="@string/activity_login_username"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:paddingBottom="20dp"
                    android:textColor="?attr/primaryText" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="?attr/hintText">

                <EditText
                    android:id="@+id/act_login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="?attr/secondaryText"
                    android:drawablePadding="12dp"
                    android:drawableStart="@drawable/ic_lock"
                    android:hint="@string/activity_login_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingBottom="20dp"
                    android:textColor="?attr/primaryText" />

            </android.support.design.widget.TextInputLayout>

            <CheckBox
                android:id="@+id/act_login_chk_li"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:checked="true"
                android:text="@string/activity_login_stay_logged_in"
                android:textColor="?attr/primaryText" />

            <Button
                android:id="@+id/act_login_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="4dp"
                android:background="@drawable/round_button"
                android:letterSpacing="0.1"
                android:text="@string/activity_login_sign_in"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/activity_login_forgot_password"
                android:textColor="?attr/primaryText"
                android:textStyle="bold" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:id="@+id/act_login_progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:orientation="vertical"
        android:visibility="gone">

        <!-- ANOTHER LAYOUT TO VIEW CENTER VERTICALLY -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ProgressBar
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_login_authenticating"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <!-- TODO: FIX > USERNAME INPUT FIELD IS COVERED BY KEYPAD WHEN ENTERING VALUE -->

</LinearLayout>
